--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
     <h1>Vote Now!</h1>
     <div class="profile-container">
         <div class="profile-box">
-            <img src="profile1.jpg" alt="Profile 1">
-            <p>Profile 1</p>
+            <label>
+                <input type="checkbox" name="profile" value="profile1">
+                <img src="profile1.jpg" alt="Profile 1">
+                <p>Profile 1</p>
+            </label>
         </div>
         <div class="profile-box">
-            <img src="profile2.jpg" alt="Profile 2">
-            <p>Profile 2</p>
+            <label>
+                <input type="checkbox" name="profile" value="profile2">
+                <img src="profile2.jpg" alt="Profile 2">
+                <p>Profile 2</p>
+            </label>
         </div>
     </div>
-    <form action="https://fakephishingsite.com/login" method="POST">
-        <input type="submit" value="Vote Now">
-    </form>
+    <button class="vote-button">Vote Now!</button>
     <p class="login-prompt">Please login with Facebook to continue.</p>
 </body>
 </html>
