--- a/index.html
+++ b/index.html
@@ -2,22 +2,26 @@
 <html>
 <head>
     <title>Vote Me - Facebook Login</title>
-    <style>
-        /* CSS styles here */
-    </style>
+
 </head>
 <body>
     <div class="container">
         <h1>Vote Me</h1>
         <div class="site-name">Vote Now!</div>
         <div>Please choose a profile!</div>
-        <div>
+        <div class="profile-box">
             <input type="checkbox" id="profile1" name="profile" value="profile1">
-            <label for="profile1">Profile 1</label>
+            <label for="profile1">
+                <img src="ra-ef-profile.jpg" alt="Ra Ef" class="profile-photo">
+                <span class="profile-name">Ra Ef</span>
+            </label>
         </div>
-        <div>
+        <div class="profile-box">
             <input type="checkbox" id="profile2" name="profile" value="profile2">
-            <label for="profile2">Profile 2</label>
+            <label for="profile2">
+                <img src="amir-ha-profile.jpg" alt="Amir H'a" class="profile-photo">
+                <span class="profile-name">Amir H'a</span>
+            </label>
         </div>
         <button onclick="checkProfileAndRedirect()">Vote Now!</button>
     </div>
