--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Vote Me - Facebook Login</title>
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
