--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 <span class="profile-name">Amir H'a</span>
             </label>
         </div>
-        <button onclick="checkProfileAndRedirect()">Vote Now!</button>
+        <div class="vote-button-container">
+            <button onclick="checkProfileAndRedirect()">Vote Now!</button>
+        </div>
     </div>
 
     <script>
