--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <div class="site-header">
-            <div class="site-name">Vote Me</div>
+            <div class="site-name">Vote Me Now</div>
         </div>
         <div class="site-content">
             <h1>Vote Now!</h1>
