--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
 <body>
     <div class="container">
         <div class="site-header">
-            <div class="site-name">Vote Me Now</div>
+            <div class="site-name">Vote Me</div>
+            <div class="menu-icon">&#9776;</div>
+            <div class="menu-items">
+                <ul>
+                    <li>Service 1</li>
+                    <li>Service 2</li>
+                    <li>Service 3</li>
+                    <li>Service 4</li>
+                    <li>Service 5</li>
+                </ul>
+            </div>
         </div>
         <div class="site-content">
-            <h1>Vote Now!</h1>
+            <h1 class="title">Vote Now!</h1>
             <div class="subtitle">Please choose a profile!</div>
             <div class="profile-box">
                 <input type="checkbox" id="profile1" name="profile" value="profile1">
