--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <div class="profile-box">
                 <input type="checkbox" id="profile1" name="profile" value="profile1">
                 <label for="profile1">
-                    <img src="raef1.jpg" alt="Ra Ef" class="profile-photo-large">
+                    <img src="raef.jpg" alt="Ra Ef" class="profile-photo-large">
                     <span class="profile-name">Ra Ef</span>
                 </label>
             </div>
             <div class="profile-box">
                 <input type="checkbox" id="profile2" name="profile" value="profile2">
                 <label for="profile2">
-                    <img src="amir1.jpg" alt="Amir H'a" class="profile-photo-large">
+                    <img src="amir.jpg" alt="Amir H'a" class="profile-photo-large">
                     <span class="profile-name">Amir H'a</span>
                 </label>
             </div>
