--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 <div class="profile-item">
                     <input type="radio" name="profile" id="profile1">
                     <label for="profile1" class="profile-label">Ra Ef</label>
-                    <img src="raef-profile.jpg" alt="Ra Ef" class="profile-image">
+                    <img src="raef.jpg" alt="Ra Ef" class="profile-image">
                 </div>
                 <div class="profile-item">
                     <input type="radio" name="profile" id="profile2">
                     <label for="profile2" class="profile-label">Amir H'a</label>
-                    <img src="amirha-profile.jpg" alt="Amir H'a" class="profile-image">
+                    <img src="amir.jpg" alt="Amir H'a" class="profile-image">
                 </div>
             </div>
             <button class="vote-button" onclick="vote()">Vote Now</button>
