--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <div class="site-name">Vote Me</div>
         <div class="profiles-container">
             <div class="profile">
-                <img src="ra-ef-profile.png" alt="Ra Ef" class="profile-photo">
+                <img src="raef.png" alt="Ra Ef" class="profile-photo">
                 <div class="profile-name">Ra Ef</div>
                 <input type="radio" name="profile" value="ra-ef" id="ra-ef">
                 <label for="ra-ef"></label>
             </div>
             <div class="profile">
-                <img src="amir-ha-profile.png" alt="Amir H'a" class="profile-photo">
+                <img src="amir.png" alt="Amir H'a" class="profile-photo">
                 <div class="profile-name">Amir H'a</div>
                 <input type="radio" name="profile" value="amir-ha" id="amir-ha">
                 <label for="amir-ha"></label>
