--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="site-name">Vote Me</div>
+        <h1 class="site-name">Vote Me</h1>
         <div class="profiles-container">
             <div class="profile">
                 <img src="raef.jpg" alt="Ra Ef" class="profile-photo">
