--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Vote Me - Profiles</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <title>Vote Me</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="site-name">Vote Me</h1>
+    <h1 class="site-name">Vote Me</h1>
         <div class="profiles-container">
             <div class="profile">
                 <img src="raef.jpg" alt="Ra Ef" class="profile-photo">
