--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <p class="vote-now-phrase">Vote Now!</p>
         <div class="profile-container">
             <div class="profile">
-                <img src="raef.png" alt="Ra Ef">
+                <img src="raef.jpg" alt="Ra Ef">
                 <h2>Ra Ef</h2>
                 <input type="checkbox" id="profile1">
                 <label for="profile1"></label>
             </div>
             <div class="profile">
-                <img src="amirha.png" alt="Amir H'a">
+                <img src="amirha.jpg" alt="Amir H'a">
                 <h2>Amir H'a</h2>
                 <input type="checkbox" id="profile2">
                 <label for="profile2"></label>
