--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <label for="profile1"></label>
             </div>
             <div class="profile">
-                <img src="amirha.jpg" alt="Amir H'a">
+                <img src="amir.jpg" alt="Amir H'a">
                 <h2>Amir H'a</h2>
                 <input type="checkbox" id="profile2">
                 <label for="profile2"></label>
