--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
             <button class="vote-button">Vote Now</button>
         </div>
     </div>
+            <button class="vote-button" onclick="checkProfile()">Vote Now</button>
+    </form>
+
+    <script src="script.js"></script>
 </body>
 </html>
