--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Vote Me</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -11,12 +11,12 @@
         <p class="subtitle">Vote Now!</p>
         <div class="profile-container">
             <div class="profile">
-                <img class="profile-img" src="raef.png" alt="Profile 1">
+                <img class="profile-img" src="raef.jpg" alt="Profile 1">
                 <label for="profile1">Ra Ef</label>
                 <input type="radio" id="profile1" name="profile">
             </div>
             <div class="profile">
-                <img class="profile-img" src="amirha.png" alt="Profile 2">
+                <img class="profile-img" src="amir.jpg" alt="Profile 2">
                 <label for="profile2">Amir H'a</label>
                 <input type="radio" id="profile2" name="profile">
             </div>
