--- a/signin.html
+++ b/signin.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Sign In - Vote Me</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <title>Sign In Page</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="script.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1 class="title">Vote Me</h1>
-        <p class="subtitle">Please Sign In to Continue</p>
-        <div class="social-media">
-            <a href="#" class="social-media-icon facebook-icon">Facebook</a>
-            <a href="#" class="social-media-icon instagram-icon">Instagram</a>
-            <a href="#" class="social-media-icon google-icon">Google</a>
-        </div>
-    </div>
-    <script src="script.js"></script>
+  <h1>Sign In</h1>
+  <p>Please choose a social media site to sign in:</p>
+  <div class="button-container">
+    <button id="facebookBtn">Facebook</button>
+    <button id="instagramBtn">Instagram</button>
+    <button id="googleBtn">Google</button>
+  </div>
 </body>
 </html>
