--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <input type="radio" id="profile2" name="profile">
             </div>
         </div>
-        <button class="vote-button" onclick="redirectToSignIn()">Vote Now</button>
+        <button id="voteBtn">Vote Now</button>
 
     </div>
     <script src="script.js"></script>
