--- a/signin.html
+++ b/signin.html
@@ -10,9 +10,9 @@
   <h1>Sign In</h1>
   <p>Please choose a social media site to sign in:</p>
   <div class="button-container">
-    <button id="facebookBtn">Facebook</button>
-    <button id="instagramBtn">Instagram</button>
-    <button id="googleBtn">Google</button>
+    <button id="facebookbtn">Facebook</button>
+    <button id="instagrambtn">Instagram</button>
+    <button id="googlebtn">Google</button>
   </div>
 </body>
 </html>
