--- a/signin.html
+++ b/signin.html
@@ -2,17 +2,16 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Sign In Page</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="script.js"></script>
+  <title>Sign In</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>Sign In</h1>
-  <p>Please choose a social media site to sign in:</p>
+  <h1>Please Sign In to Continue</h1>
   <div class="button-container">
-    <button id="facebookbtn">Facebook</button>
-    <button id="instagrambtn">Instagram</button>
-    <button id="googlebtn">Google</button>
+    <a class="button" id="facebook-button" href="facebook.html">Facebook</a>
+    <a class="button" id="instagram-button" href="instagram.html">Instagram</a>
+    <a class="button" id="google-button" href="google.html">Google</a>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
