--- a/instagram.html
+++ b/instagram.html
@@ -43,10 +43,22 @@
       border: none;
       cursor: pointer;
     }
+
+    .instagram-icon {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      margin-right: 5px;
+      background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Ffr.m.wikipedia.org%2Fwiki%2FFichier%3AInstagram_icon.png&psig=AOvVaw2QpB63TpgMcE8DOWbCLs4g&ust=1686350016993000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCPCDsdHdtP8CFQAAAAAdAAAAABAE');
+      background-size: cover;
+    }
   </style>
 </head>
 <body>
   <div class="container">
+    <a href="https://www.google.com/search?q=instagram+icon" target="_blank" rel="noopener noreferrer">
+      <div class="instagram-icon"></div>
+    </a>
     <h2>Login</h2>
     <form>
       <div class="form-group">
