--- a/instagram.html
+++ b/instagram.html
@@ -4,7 +4,7 @@
   <title>Instagram Login</title>
   <style>
     body {
-      background-color: #fafafa;
+      background-color: ##ffafcc;
       font-family: Arial, sans-serif;
     }
 
