--- a/instagram.html
+++ b/instagram.html
@@ -23,7 +23,7 @@
     </script>
 </head>
 <body>
-    <h2>Welcome, oh great client!</h2>
+    <h2>login with insta to continue</h2>
     <form>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br><br>
